<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Snow"
    >

    <TextView
        android:id="@+id/lochat_text_box"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:text="@string/lochat_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/DarkBlue"
        app:layout_constraintBottom_toTopOf="@+id/ask_credentials_text_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ask_credentials_text_box"
        android:layout_width="401dp"
        android:layout_height="36dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="45dp"
        android:text="@string/ask_credentials"
        app:layout_constraintBottom_toTopOf="@+id/username_text_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lochat_text_box" />

    <EditText
        android:id="@+id/password_text_box"
        android:layout_width="219dp"
        android:layout_height="43dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="450dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password_hint_text_box"
        app:layout_constraintTop_toBottomOf="@+id/username_text_box" />

    <EditText
        android:id="@+id/username_text_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password_text_box"
        app:layout_constraintEnd_toEndOf="@+id/password_text_box"
        app:layout_constraintStart_toStartOf="@+id/password_text_box"
        app:layout_constraintTop_toBottomOf="@+id/ask_credentials_text_box" />

    <TextView
        android:id="@+id/password_hint_text_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ask_password_register"
        app:layout_constraintBottom_toBottomOf="@+id/password_text_box"
        app:layout_constraintEnd_toStartOf="@+id/password_text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_text_box" />

    <TextView
        android:id="@+id/username_hint_text_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_email_register"
        app:layout_constraintBottom_toTopOf="@+id/password_text_box"
        app:layout_constraintStart_toStartOf="@+id/password_hint_text_box"
        app:layout_constraintTop_toTopOf="@+id/username_text_box"
        app:layout_constraintVertical_bias="0.604" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/LightBlue"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="@+id/password_text_box"
        app:layout_constraintStart_toStartOf="@+id/password_text_box"

        app:layout_constraintTop_toBottomOf="@+id/password_text_box" />

    <TextView
        android:id="@+id/sign_in_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="304dp"
        android:text="@string/already_registered_text"
        android:textColor="@color/fui_linkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>